# k

./: .clang-format  CMakeLists.txt
src/: config.cpp  config.h  log.h  main.cpp  renderer.cpp  renderer.h
src/core/: assert.cpp  assert.h  config.cpp  config.h  game_loop.cpp  game_loop.h  game_state.cpp  game_state.h  input.cpp  input.h
src/gfx/: renderer.cpp  renderer.h  tiles.cpp  tiles.h
